# fastapi-vue-template

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: codeql-analysis.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/database/migrations/models/: 0_20220429051953_init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: HelloWorld.vue
frontend/src/router/: index.js
