[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
aerich = "^0.6.3"
asyncpg = "^0.25.0"
fastapi = "^0.75.2"
python = "^3.9"
tortoise-orm = "^0.19.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "src.database.config.TORTOISE_ORM"
location = "./src/database/migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
